--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,18 +1,18 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Galería de Fotos</ion-title>
+    <ion-title>Galería</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-button expand="full" (click)="takePhoto()">
+  <ion-button expand="full" (click)="addPhotoToGallery()">
     Tomar Foto
   </ion-button>
 
   <ion-grid>
     <ion-row>
-      <ion-col size="6" *ngFor="let photo of photos">
-        <ion-img [src]="photo"></ion-img>
+      <ion-col size="6" *ngFor="let photo of photoService.photos">
+        <ion-img [src]="photo.webviewPath"></ion-img>
       </ion-col>
     </ion-row>
   </ion-grid>
