Feat: Refactorizacion general
* Se agregan nuevas dependencias.
* Se crean nuevos archivos relacionados a la autenticacion y carrito de compras con su lógica correspondiente (se alteran los tabs),
* se adicionan imagenes para la vista de productos.
* Se añaden estilos para dar un mejor aspecto a la vista del usuario
* Se modifica el enrutamiento general
* Se agregan servicios nuevos.

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,12 +1,16 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Galería</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-button expand="full" (click)="addPhotoToGallery()">
+  <ion-button expand="full" (click)="addPhotoToGallery()" color="secondary">
     Tomar Foto
+  </ion-button>
+
+  <ion-button expand="full" (click)="goToCart()" color="success" class="ion-margin-top">
+    Ver Carrito ({{ cartItemCount }} items)
   </ion-button>
 
   <ion-grid>
